feat: Update apartment descriptions and change JPA ddl-auto setting to create